[package]
name = "js_option"
version = "0.1.1"
description = "An Option-like type with separate null and undefined variants"
readme = "README.md"
repository = "https://github.com/ruma/js_option"
license = "MIT"
edition = "2018"
resolver = "2"
include = ["src/**/*", "LICENSE", "README.md"]

[features]
default = ["serde"]
serde = ["serde_crate"]

[dependencies]
serde_crate = { package = "serde", version = "1.0.125", optional = true }

[dev-dependencies]
serde_crate = { package = "serde", version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
