[package]
name = "js_option"
version = "0.1.1"
description = "An Option-like type with separate null and undefined variants"
readme = "README.md"
repository = "https://github.com/ruma/js_option"
license = "MIT"
edition = "2021"
rust-version = "1.60.0"
resolver = "2"
include = ["src/**/*", "LICENSE", "README.md"]

[features]
default = ["serde"]
serde = ["dep:serde_core"]

[dependencies]
serde_core = { version = "1.0.221", optional = true }

[dev-dependencies]
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.64"
